# trueseal

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  workflow.yml
scripts/: check_release_state.py  install.ps1  install.sh
tests/: test_e2e_workflow.py  test_git_hooks_bootstrap.py  test_unit_core.py
trueseal/: __init__.py  __main__.py  cli.py
trueseal/commands/: cloak.py  demo.py  duress.py  env.py  git.py  inspect.py  internal_hook.py  keygen.py  merge.py  mfa.py  open_vault.py  pipeline.py  revoke.py  seal.py  shard.py  verify.py  version.py
trueseal/crypto/: __init__.py  cipher.py  identity.py  keygen.py  mfa.py  shamir.py  zeroize.py
trueseal/ui/: __init__.py  decorators.py  repl.py  styling.py
trueseal/utils/: __init__.py  helpers.py  logger.py
trueseal/vault/: __init__.py  builder.py  duress.py  manifest.py  open.py  policy.py  seal.py  stego.py  vault.py
